[metadata]
name = sample-project
version = attr: sample.__version__
author = han_yu
author_email = hanyupomelo@gmail.com
description = This is a sample project system.
keywords = sample project
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8

[options]
python_requires > = 3.8
include_package_data = True
packages = find:
package_dir =
    =src
install_requires =

[options.packages.find]
where = src
