[metadata]
name = example_blog
version = attr: example_blog.__version__
author = han_yu
author_email = hanyupomelo@gmail.com
description = This is example blog system.
keywords = blog example
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8

[options]
python_requires > = 3.8
include_package_data = True
packages = find:
package_dir =
    =src
install_requires =

[options.packages.find]
where = src

install_requires =
    click
    dynaconf
    sqlalchemy
    pydantic
    fastapi


[options.entry_points]
console_scripts =
    example_blog = example_blog.cmdline:main
